# todo-web-rust

./: .gitignore  Cargo.toml  Dockerfile
.github/workflow/: ci.yml
.github/workflows/: ci.yml  docker-build.yml
src/: config.rs  embed.rs  health.rs  main.rs  metrics.rs  server.rs  static_assets.rs
static/: index.html
