[package]
name = "todo-web-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
rust-embed = "8.6.0"
mime_guess = "2.0"
env_logger = "0.11.7"
log = "0.4"
config = "0.15.9"
serde = { version = "1.0", features = ["derive"] }
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"
futures = "0.3.31"
